Commit final extracciones con Pentaho